<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/row_font_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnFriend"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_orange"
            android:layout_marginBottom="15dp"
            android:text="@string/friends" />

        <Button
            android:id="@+id/btnObservers"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_orange"
            android:text="@string/see_observers" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_container_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/button_share_bg"
        android:gravity="center">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackTint="@color/swtich_track"
            app:thumbTint="@color/switch_thumb"
            android:text="@string/share_location" />

    </LinearLayout>


    <!--    <Button-->
    <!--        android:id="@+id/btnLocation"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="get location" />-->

</LinearLayout>