<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/row_background">

        <ImageView
            android:id="@+id/personImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/person_icon" />

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/personImg"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@id/personImg"
            android:textSize="@dimen/row_font_size" />

        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameView"
            android:layout_alignLeft="@id/usernameView"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/personImg"
            android:textSize="@dimen/row_font_size" />

        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameView"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/firstNameView"
            android:textSize="@dimen/row_font_size" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAllow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/personImg"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:trackTint="@color/swtich_track"
            app:thumbTint="@color/switch_thumb"
            android:text="@string/allow" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameView"
            android:layout_alignLeft="@id/firstNameView"
            android:layout_marginTop="8dp"
            android:background="@drawable/chat_btn_bg"
            android:minHeight="0dp"
            android:text="@string/chat" />

    </RelativeLayout>


</LinearLayout>